@@ -1,5 +1,6 @@
 Version 2.02.79 -  
 ===================================
+  Use char* arithmetic in target_version(), _process_all(), _targets().
   Fixing const cast gcc warnings in the code.
   Check read() and close() results in _get_cmdline().
   Add const for struct config_node usage.
